# medirag_qdrant

./: .env  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
src/: check_setup.py  pipeline_ingestion.py  run_pipeline.py  test_chat.py  test_ingestion.py  test_reranking.py  test_retrieval.py  test_splitting.py
src/core/: config.py  interfces.py
src/generation/: rag_chain.py
src/ingestion/: cleaners.py  cleners.py  loaders.py  loders.py  splitters.py
src/retrieval/: reranking.py  services.py
src/testing/: check_setup.py  test_chat.py  test_ingestion.py  test_reranking.py  test_retrieval.py  test_splitting.py
src/utils/: download_new_data.py
src/vector_store/: store.py
